--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,33 @@
   "bugs": {
     "url": "https://github.com/nawodyaishan/WebDev-Node-Express-TypeScript-Mongo-Zod-API/issues"
   },
-  "homepage": "https://github.com/nawodyaishan/WebDev-Node-Express-TypeScript-Mongo-Zod-API#readme"
+  "homepage": "https://github.com/nawodyaishan/WebDev-Node-Express-TypeScript-Mongo-Zod-API#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.8",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.6.5",
+    "nanoid": "^4.0.0",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.1",
+    "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
+    "@types/nanoid": "^3.0.0",
+    "@types/node": "^18.8.4",
+    "@types/pino": "^7.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
+  }
 }
